# git-ai-reporter

./: .bandit  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  Makefile  NOTICE  PENDING.md  README.md  RELEASING.md  SECURITY.md  TEST_SUITE.md  docker-compose.yml  pyproject.toml  setup.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: allure-report.yml  bandit.yml  ci.yml  codeql.yml  dependency-review.yml  docs.yml  publish.yml  release.yml
docs/: ALLURE_GUIDE.md  CODING_GUIDELINES.md  PYTEST_GUIDELINES.md  features.md  getting-started.md  index.md  installation.md  mkdocs.yml  roadmap.md  tags.md
docs/about/: acknowledgments.md  changelog.md  faq.md  index.md
docs/api/: analysis.md  cache.md  core.md  index.md  orchestration.md  plugins.md  services.md  summaries.md  utils.md  writing.md
docs/architecture/: caching.md  index.md  json-handling.md  multi-lens.md  overview.md  plugins.md  three-tier-ai.md
docs/assets/javascripts/: custom.js  tablesort.js
docs/assets/stylesheets/: badges.css  custom.css  termage.css
docs/cli/: commands.md  environment.md  examples.md  index.md  options.md
docs/development/: coding-guidelines.md  index.md  setup.md  testing.md
docs/guide/: advanced-usage.md  ai-models.md  basic-usage.md  caching.md  concepts.md  configuration.md  faq.md  index.md  integration.md  output-formats.md  performance.md  quick-start.md  templates.md  troubleshooting.md
docs/installation/: configuration.md  docker.md  from-pypi.md  from-source.md  index.md
docs/internals/: index.md  prompt-fitting.md  summaries.md  utils.md
docs/overrides/: .gitkeep
docs/overrides/partials/: .gitkeep
scripts/: _check_repo.sh  check-banned-words.sh  check-quality.sh  extract_git_recent_data.py  install-hooks.sh  lint.sh  run_cov.sh  security-scan.sh  send_to_allure.sh  update_packages.sh  view_allure.sh
scripts/hooks/: commit-msg  pre-commit  pre-push
src/: tolerantjson.pyi
src/git_ai_reporter/: __init__.py  cli.py  config.py
src/git_ai_reporter/analysis/: git_analyzer.py
src/git_ai_reporter/cache/: manager.py
src/git_ai_reporter/orchestration/: __init__.py  orchestrator.py
src/git_ai_reporter/prompt_fitting/: PROMPT_FITTING.md  README.md  analysis.py  caching.py  constants.py  exceptions.py  factory.py  fallback.py  logging.py  parallel.py  plugins.py  prompt_fitting.py  validation.py
src/git_ai_reporter/prompt_fitting/monitoring/: monitor.py
src/git_ai_reporter/prompt_fitting/utils/: __init__.py  parallel_processing.py  strategy_selection.py
src/git_ai_reporter/services/: gemini.py
src/git_ai_reporter/summaries/: commit.py
src/git_ai_reporter/utils/: __init__.py  git_command_runner.py  json_helpers.py
src/git_ai_reporter/writing/: __init__.py  artifact_writer.py  markdown_utils.py
stubs/tolerantjson/: __init__.pyi  parser.pyi
tests/: __init__.py  allure.properties  allure_unified_plugin.py  categories.json  conftest.py
tests/bdd/: __init__.py
tests/bdd/features/: ai_processing.feature  cache_management.feature  end_to_end_workflow.feature  error_handling.feature  git_analysis.feature  incremental_updates.feature  pre_release_process.feature  summary_generation.feature
tests/bdd/step_defs/: test_ai_processing_steps.py  test_cache_management_steps.py  test_end_to_end_workflow_steps.py  test_error_handling_steps.py  test_git_steps.py  test_incremental_updates_steps.py  test_pre_release_steps.py  test_summary_steps.py
tests/e2e/: __init__.py
tests/extracts/: sample_git_data.jsonl
tests/integration/: __init__.py  test_cli_integration.py
tests/performance/: __init__.py
tests/property/: __init__.py  test_hypothesis_properties.py
tests/unit/: __init__.py  test_cli.py  test_cli_coverage.py  test_coverage_final.py  test_pre_release_feature.py
tests/unit/analysis/: test_commit_filtering.py  test_date_range_bug.py  test_git_analyzer.py  test_git_analyzer_coverage.py
tests/unit/cache/: test_cache_manager.py
tests/unit/models/: test_models.py
tests/unit/orchestration/: __init__.py  test_daily_summary_reuse.py  test_orchestrator.py  test_orchestrator_coverage.py
tests/unit/prompt_fitting/: __init__.py  test_analysis.py  test_data_integrity.py  test_monitoring.py  test_plugins.py  test_property_based.py
tests/unit/services/: test_gemini.py  test_gemini_100_coverage.py  test_gemini_advanced.py  test_gemini_analysis.py  test_gemini_basic.py  test_gemini_client.py  test_gemini_coverage.py  test_gemini_final_coverage.py
tests/unit/summaries/: test_summaries.py
tests/unit/utils/: test_async_file_utils.py  test_file_helpers.py  test_file_helpers_coverage.py  test_git_command_runner.py  test_git_command_runner_coverage.py  test_json_helpers.py  test_windows_compat.py
tests/unit/writing/: test_artifact_writer.py  test_artifact_writer_coverage.py  test_artifact_writer_refactored.py  test_changelog_utils_coverage.py  test_daily_updates_dedup.py
tests/utils/: __init__.py  windows_cleanup.py
